chore: jbundle packaging docs